# IMAndroidCProject

TUIKit/IMCSDK/imcsdk/cpp/: CMakeLists.txt  im_c_sdk_jni.cmake
TUIKit/IMCSDK/imcsdk/cpp/engine/: download_callback_impl.cpp  download_callback_impl.h  observer_init.cpp  observer_init.h  send_callback_impl.cpp  send_callback_impl.h  tim_callback_impl.cpp  tim_callback_impl.h  tim_common.h  tim_engine.cpp  tim_engine.h  value_callback_impl.h
TUIKit/IMCSDK/imcsdk/cpp/include/: TIMCloud.h  TIMCloudCallback.h  TIMCloudComm.h  TIMCloudDef.h  TIMCommunityManager.h  TIMConversationManager.h  TIMErrorCode.h  TIMExperimentalAPI.h  TIMFriendshipManager.h  TIMGroupManager.h  TIMManager.h  TIMMessageManager.h  TIMOfflinePushManager.h
TUIKit/IMCSDK/imcsdk/cpp/jni/: jvm_wrapper.cpp
TUIKit/IMCSDK/imcsdk/cpp/jni/basic/: java_basic_jni.cpp  java_basic_jni.h  jni_helper.cpp  jni_helper.h  jni_json_objarr_util.cpp  jni_json_objarr_util.h  jni_util.cpp  jni_util.h
TUIKit/IMCSDK/imcsdk/cpp/jni/convert/: call_experimental_api_jni.cpp  call_experimental_api_jni.h  conversation_jni.cpp  conversation_jni.h  conversation_list_filter_jni.cpp  conversation_list_filter_jni.h  conversation_operation_result_jni.cpp  conversation_operation_result_jni.h  conversation_result_jni.cpp  conversation_result_jni.h  create_group_member_info_jni.cpp  create_group_member_info_jni.h  elem_handler_jni.cpp  elem_handler_jni.h  elem_processor_jni.cpp  elem_processor_jni.h  friend_add_application_jni.cpp  friend_add_application_jni.h  friend_application_jni.cpp  friend_application_jni.h  friend_group_jni.cpp  (+89 more)
(+75 files in other folders)
